Minor fixes and Cleanup

--- a/EZBlocker3/MainWindow.xaml
+++ b/EZBlocker3/MainWindow.xaml
@@ -28,7 +28,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBlock x:Name="StatusLabel" Grid.Column="0" Text="Loading..." HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Center" TextTrimming="CharacterEllipsis" />
+            <TextBlock x:Name="StateLabel" Grid.Column="0" Text="Loading..." HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Center" TextTrimming="CharacterEllipsis" />
         </Grid>
     </Grid>
 </Window>
