--- a/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
+++ b/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EZBlocker3.AutoUpdate.UpdateWindow"
+﻿<Window x:Class="EZBlocker3.AutoUpdate.UpdateFoundWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,29 +6,31 @@
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:local="clr-namespace:EZBlocker3"
         mc:Ignorable="d"
-        Title="Update Found" Height="170" Width="350" ResizeMode="CanMinimize"
+        Title="Update Found!" Height="170" Width="350" ResizeMode="NoResize" ShowInTaskbar="False"
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid Margin="10 5 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
-            <RowDefinition Height="10" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="10" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="10" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Text="A new version of EZBlocker 3 is available!" />
-        <ui:ProgressBar Grid.Row="2" x:Name="downloadProgress" Height="20" />
-        <TextBlock Grid.Row="4" x:Name="downloadState" />
-        <Grid Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <TextBlock Grid.Row="1" x:Name="versionInfoLabel" />
+        <Grid Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="10" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="acceptDownloadButton" Content="Download" IsEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            <Button Grid.Column="2" x:Name="restartButton" Content="Install" IsEnabled="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="acceptDownloadButton" Content="Update and restart" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <Button Grid.Row="2" Grid.Column="0" x:Name="notNowButton" Content="Not now" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <Button Grid.Row="2" Grid.Column="2" x:Name="ignoreUpdateButton" Content="Ignore update" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
     </Grid>
 </Window>
