Autosize update windows

--- a/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
+++ b/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:local="clr-namespace:EZBlocker3"
         mc:Ignorable="d"
-        Title="Update Found!" Height="170" Width="350" ResizeMode="NoResize" ShowInTaskbar="False" WindowStyle="ToolWindow"
+        Title="Update Found!" 
+        SizeToContent="Height" Width="350" ResizeMode="NoResize"
+        ShowInTaskbar="False" WindowStyle="ToolWindow"
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid Margin="10 5 10 10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
