--- a/EZBlocker3/AutoUpdate/DownloadUpdateWindow.xaml
+++ b/EZBlocker3/AutoUpdate/DownloadUpdateWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:local="clr-namespace:EZBlocker3"
         mc:Ignorable="d"
-        Title="EZBlocker 3 Updater"
+        Title="Updater"
         SizeToContent="Height" Width="350" ResizeMode="NoResize"
         ShowInTaskbar="False" WindowStyle="ToolWindow"
         ui:WindowHelper.UseModernWindowStyle="True">
