--- a/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
+++ b/EZBlocker3/AutoUpdate/UpdateFoundWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:local="clr-namespace:EZBlocker3"
         mc:Ignorable="d"
-        Title="Update Found!" 
+        Title="Update Found"
         SizeToContent="Height" Width="350" ResizeMode="NoResize"
         ShowInTaskbar="False" WindowStyle="ToolWindow"
         ui:WindowHelper.UseModernWindowStyle="True">
@@ -30,7 +30,7 @@
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="acceptDownloadButton" Content="Update and restart" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="acceptDownloadButton" Content="Update and restart" IsDefault="True" Style="{StaticResource AccentButtonStyle}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <Button Grid.Row="2" Grid.Column="0" x:Name="notNowButton" Content="Not now" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <Button Grid.Row="2" Grid.Column="2" x:Name="ignoreUpdateButton" Content="Ignore update" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
