--- a/EZBlocker3/Settings/SettingsWindow.xaml
+++ b/EZBlocker3/Settings/SettingsWindow.xaml
@@ -23,8 +23,9 @@
         <CheckBox x:Name="startOnLoginCheckBox" Content="Start on Login" IsChecked="False" ToolTip="Should EZBlocker 3 automatically start with Windows" />
         <CheckBox x:Name="startWithSpotifyCheckBox" Content="Start with Spotify" IsChecked="False" ToolTip="Start EZBlocker 3 when Spotify is started." />
         <ui:SimpleStackPanel Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center" Spacing="10">
-            <Button x:Name="saveButton" Content="Save" Padding="20 5" />
+            <Button x:Name="uninstallButton" Content="Uninstall" Padding="20 5" />
             <Button x:Name="cancelButton" Content="Cancel" Padding="20 5" />
+            <Button x:Name="saveButton" Content="Save" Padding="20 5" />
         </ui:SimpleStackPanel>
     </StackPanel>
 </Window>
