--- a/EZBlocker3/Settings/SettingsWindow.xaml
+++ b/EZBlocker3/Settings/SettingsWindow.xaml
@@ -16,9 +16,10 @@
             <RadioButton x:Name="minimizeToTrayRadioButton" Content="Minimize to tray" Tag="tray" IsChecked="True" Margin="0 0 10 0" GroupName="Minimize"  />
             <RadioButton x:Name="minimizeToTaskbarRadioButton" Content="Minimize to taskbar" Tag="taskbar" GroupName="Minimize" />
         </StackPanel>
-        <CheckBox x:Name="unmuteOnCloseCheckBox" Content="Unmute on close" IsChecked="True" ToolTip="Should Spotify be unmuted when EZBlocker 3 closes." />
+        <CheckBox x:Name="unmuteOnCloseCheckBox" Content="Unmute on close" IsChecked="True" ToolTip="Should Spotify be unmuted when EZBlocker 3 exits." />
         <CheckBox x:Name="checkForUpdatesCheckBox" Content="Check for Updates" IsChecked="True" ToolTip="Should EZBlocker 3 check for new versions on startup." />
         <CheckBox x:Name="debugModeCheckBox" Content="Debug Mode" IsChecked="False" ToolTip="Enabling debug mode will create a log file in the directory of the executable." />
+        <CheckBox x:Name="assumeAdOnUnknowsStateCheckBox" Content="Assume ad in case of doubt" IsChecked="True" ToolTip="Should EZBlocker 3 assume that an ad is playing if the spotify state can not be determined?" />
         <CheckBox x:Name="startMinimizedCheckBox" Content="Start Minimized" IsChecked="False" />
         <CheckBox x:Name="startOnLoginCheckBox" Content="Start on Login" IsChecked="False" ToolTip="Should EZBlocker 3 automatically start with Windows" />
         <CheckBox x:Name="startWithSpotifyCheckBox" Content="Start with Spotify (experimental)" IsChecked="False" ToolTip="Start EZBlocker 3 when Spotify is started." />
