--- a/EZBlocker3/Settings/SettingsWindow.xaml
+++ b/EZBlocker3/Settings/SettingsWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:local="clr-namespace:EZBlocker3.Settings"
-        xmlns:utils="clr-namespace:EZBlocker3.Utils"
+        xmlns:utils="clr-namespace:EZBlocker3.Utils" 
+        xmlns:properties="clr-namespace:EZBlocker3.Properties" d:DataContext="{d:DesignInstance Type=properties:Settings}"
         mc:Ignorable="d"
         Title="Settings"
         SizeToContent="WidthAndHeight" ResizeMode="NoResize"
