--- a/EZBlocker3/App.xaml
+++ b/EZBlocker3/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.modernwpf.com/2019"
-             xmlns:local="clr-namespace:EZBlocker3"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:EZBlocker3">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
